@@ -1,3 +1,8 @@
+2011-10-10  Brian Gough  <bjg@network-theory.co.uk>
+
+	* coupling.c (gsl_sf_coupling_3j_e): compute 3j factors using logs
+	to allow larger range
+
 2011-09-20  Brian Gough  <bjg@network-theory.co.uk>
 
 	* coupling.c (triangle_selection_fails): extend triangle selection
